--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root {
+    font-family: 'Roboto', sans-serif;
+}
+
 body {
     display: grid;
     justify-content: center;
+    justify-items: center;
+    background-color: rgb(94, 94, 214);
+    height: 100vh;
+    width: 100vw;
+    grid-template-rows: 50px 20px auto;
 }
 
 .wrapper {
     display: grid;
     justify-content: center;
     justify-items: center;
+}
+
+.currentCondition {
+    height: fit-content;
+    width: 100%;
+    background-color: violet;
+    margin-top: 20px;
+    border: 1px solid grey;
+    border-radius: 10px;
+    color: antiquewhite;
+}
+
+h1, h2, h3 {
+    margin: 0;
+}
+
+h2 {
+    margin: 10px 0;
+}
+
+input, button {
+    background-color: darkgrey;
+    border: 0;
+    border-radius: 5px;
+}
+
+button {
+    cursor: pointer;
 }
