--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,12 @@ body {
     width: 100%;
     background-color: violet;
     margin-top: 20px;
-    border: 1px solid grey;
+    border: 0px solid grey;
     border-radius: 10px;
     color: antiquewhite;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
-
-h1, h2, h3 {
+    h1, h2, h3 {
     margin: 0;
 }
 
@@ -42,6 +42,7 @@ input, button {
     background-color: darkgrey;
     border: 0;
     border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 5px 5px;
 }
 
 button {
